--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -44,7 +44,8 @@ body {
   background-repeat: no-repeat;
   width: 15%;
   height: 15%;
-
+  /*text-decoration: inherit;*/
+  
 }
 
 #about{
@@ -104,6 +105,10 @@ body {
 .close {
   color: #b28e30;
   text-align: center;
+}
+
+a.menu_links {
+    cursor: pointer;
 }
 
 /*.overlord
