--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -45,7 +45,7 @@ body {
   width: 15%;
   height: 15%;
   /*text-decoration: inherit;*/
-  
+
 }
 
 #about{
@@ -254,7 +254,7 @@ img {
   font-size: 14pt;
   padding: 1rem;
   min-width: 80%;
-  color: 30395c;
+  color: #30395c;
 }
 
 #comm-tcg {
@@ -556,6 +556,7 @@ ul {
   }
   h3 {
     font-size: 160%;
+  }  
 }
 
 @media screen and (min-width: 850px){
